# Nurse_Scraping_Registry

./: .gitignore  README.md  pyproject.toml  user_requirement.txt
src/: .env  __init__.py  base.py  constants.py  exceptions.py  schema.py  test.py  utils.py
src/ac/: constants.py  crawler.py  crawler_update.py
src/nurse-list/: crawler.py
src/proxy/: private_proxy_service.py
